--- a/app/src/main/res/layout/fragment_photo_preview.xml
+++ b/app/src/main/res/layout/fragment_photo_preview.xml
@@ -17,4 +17,15 @@
 
     </FrameLayout>
 
+    <com.karakullukcu.huseyin.quickphoto.view.DescriptionEditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/descriptionEditTextBackground"
+        android:textColor="@android:color/white"
+        android:visibility="invisible"
+        android:padding="4dp"
+        android:textAlignment="center"
+        android:layout_margin="8dp"
+        android:id="@+id/descriptionEditText" />
+
 </RelativeLayout>
