--- a/app/src/main/res/layout/fragment_photo_preview.xml
+++ b/app/src/main/res/layout/fragment_photo_preview.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     tools:context="com.karakullukcu.huseyin.quickphoto.PhotoPreviewFragment">
 
-    <FrameLayout
+    <RelativeLayout
         android:id="@+id/imageContainerLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
@@ -14,18 +14,17 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
+        <com.karakullukcu.huseyin.quickphoto.view.DescriptionEditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/descriptionEditTextBackground"
+            android:textColor="@android:color/white"
+            android:imeOptions="flagNoExtractUi"
+            android:padding="4dp"
+            android:textAlignment="center"
+            android:layout_margin="8dp"
+            android:id="@+id/descriptionEditText" />
 
-    </FrameLayout>
-
-    <com.karakullukcu.huseyin.quickphoto.view.DescriptionEditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@color/descriptionEditTextBackground"
-        android:textColor="@android:color/white"
-        android:visibility="invisible"
-        android:padding="4dp"
-        android:textAlignment="center"
-        android:layout_margin="8dp"
-        android:id="@+id/descriptionEditText" />
+    </RelativeLayout>
 
 </RelativeLayout>
